--- a/config/site.yml
+++ b/config/site.yml
@@ -3,13 +3,16 @@ site:
 
   locales: [en, fr]
 
-  seo_title: Applidget - Web and Mobile application development
-  meta_description: "Applidget is a development agency based in Paris, France."
+  seo_title: Applidget - We make Web and Mobile Apps
+  meta_description: "Applidget is an Paris-based agency, specialized with Ruby on Rails, HTML5, iOS, Android development."
 
   pages:
     - "index": # page path (the template can edited here app/views/pages/index.liquid)
-        title: "Home page"
-        published: true
+      title: "Home"
+      published: true
+    - "spirit":
+      title: "Spirit"
+      published: true
     - "404":
-        title: "Page not found"
-        published: true
+      title: "404 - Page not found"
+      published: true
