First section integrated with responsive Sprite and Retina

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ config/deploy.yml
 public/.sass-cache/
 public/stylesheets/bootstrap.css
 public/stylesheets/bootstrap-responsive.css
+public/images/stickers-retina-s893d7a1edc.png
+public/images/stickers-s48d3d5a6b7.png
