CSS Integration of technologies contents done

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ public/stylesheets/bootstrap.css
 public/stylesheets/bootstrap-responsive.css
 public/images/stickers-retina-*.png
 public/images/stickers-*.png
+public/images/illustration_*
