Header integration done - New model added - content displayed

--- a/config/site.yml
+++ b/config/site.yml
@@ -15,5 +15,7 @@ site:
       published: true
     - "event_solutions":
       published: true
+    - "team":
+      published: true
     - "404":
       published: true
