--- a/data/people.yml
+++ b/data/people.yml
@@ -4,8 +4,7 @@ Tristan Verdier:
         Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.
   picture: /images/illustration_9.png
   position: President
-  twitter_username: tristan_verdier
-  linkedin_username: tristan.verdier
+  linkedin_profile_url: http://www.linkedin.com/profile/view?id=8193194
   category: Associate
   published: true
 Romain Pechayre:
@@ -13,7 +12,7 @@ Romain Pechayre:
   picture: /images/illustration_10.png
   position: Directeur Technique
   twitter_username: rpechayr
-  linkedin_username: rpechayr
+  linkedin_profile_url: http://www.linkedin.com/profile/view?id=39574959
   github_username: rpechayr
   category: Associate
   published: true
