Header done - Soon content

--- a/config/site.yml
+++ b/config/site.yml
@@ -17,5 +17,7 @@ site:
       published: true
     - "team":
       published: true
+    - "blogs":
+      published: true
     - "404":
       published: true
