--- a/app/content_types/people.yml
+++ b/app/content_types/people.yml
@@ -16,8 +16,8 @@ fields:
 - picture:
     label: Picture
     type: file
-- position:
-    label: Position
+- title:
+    label: Title
     type: string
     localized: true
 - twitter_username:
