Main template added for upcoming new pages

--- a/config/site.yml
+++ b/config/site.yml
@@ -21,5 +21,8 @@ site:
       published: true
     - "blogs":
       published: true
+    - "template":
+      published: false
+      listed: false
     - "404":
       published: true
